updated for sonarscan